# aerospike-ce-ecosystem-plugins

./: CHANGELOG.md  README.md  VERSIONING.md
.claude-plugin/: marketplace.json  plugin.json
.github/: markdown-link-check.json
.github/workflows/: agent-implement.yml  daily-release.yml  issue-planner.yml  link-check.yml  pr-reviewer.yml  skill-e2e-chart.yml
agents/: acko-cluster-debugger.md
evals/: evals.json
skills/acko-config-reference/: SKILL.md
skills/acko-config-reference/examples/: crd-3node-2ns.yaml
skills/acko-config-reference/reference/: breaking-changes-7x-to-8.md  byte-values.md  conditions-and-phases.md  crd-mapping.md  parameters-8.md  webhook-validation.md
skills/acko-debugging/: SKILL.md
skills/acko-debugging/reference/: playbook.md
skills/acko-deploy/: SKILL.md
skills/acko-deploy/examples/: 01-minimal.yaml  02-3node-pv.yaml  03-acl.yaml  04-monitoring.yaml  05-multirack.yaml  06-storage-advanced.yaml  07-template.yaml  08-full-featured.yaml  09-operations.yaml
skills/acko-deploy/reference/: cr-spec-fields.md  helm-install.md
skills/acko-e2e-test/: SKILL.md
skills/acko-e2e-test/e2e_pytest/: conftest.py  pyproject.toml
skills/acko-e2e-test/e2e_pytest/helpers/: api_client.py  chart_yaml.py  cli.py  env.py  otel_log.py  port_forward.py  waits.py
skills/acko-e2e-test/e2e_pytest/scripts/: _common.sh  bootstrap.sh  cert-manager.sh  cleanup.sh  diag-bundle.sh  helm-install.sh  kind-up.sh  load-image.sh
skills/acko-e2e-test/e2e_pytest/tests/: test_multi_cluster.py
skills/acko-e2e-test/e2e_pytest/tests/api/: test_api_crud.py  test_api_k8s_create.py
skills/acko-e2e-test/e2e_pytest/tests/chart/: test_helm_lint.py  test_helm_matrix.py  test_helm_real_install.py
skills/acko-e2e-test/e2e_pytest/tests/lifecycle/: test_asc_create_smoke.py  test_ginkgo.py
skills/acko-e2e-test/e2e_pytest/tests/observability/: test_logging.py  test_otel_runtime.py
skills/acko-e2e-test/reference/: eval-criteria.md  (+3 more)
skills/acko-operations/: SKILL.md
skills/ackoctl/: SKILL.md
skills/acm-mcp-init/: SKILL.md
skills/aerospike-py-api/: SKILL.md
skills/aerospike-py-fastapi/: SKILL.md
skills/bug-reporter/: SKILL.md
(+40 files in other folders)
